feat: adiciona documentação Swagger e corrige controllers
